--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <a href="#preco" class="btn custom-btn shadow-lg fw-bolder text-uppercase">Comprar Agora</a>
+                            <a href="https://ev.braip.com/campanhas/cpa/cam8kjn98" class="btn custom-btn shadow-lg fw-bolder text-uppercase">Comprar Agora</a>
                         </div>
                     </div>
                 </div>
@@ -490,7 +490,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <a href="#preco" class="btn custom-btn shadow-lg fw-bolder text-uppercase">Comprar Agora</a>
+                            <a href="https://ev.braip.com/campanhas/cpa/camm28j05" class="btn custom-btn shadow-lg fw-bolder text-uppercase">Comprar Agora</a>
                         </div>
                     </div>
                 </div>
@@ -511,7 +511,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <a href="#preco" class="btn custom-btn shadow-lg fw-bolder text-uppercase">Comprar Agora</a>
+                            <a href="https://ev.braip.com/campanhas/cpa/camge2o77" class="btn custom-btn shadow-lg fw-bolder text-uppercase">Comprar Agora</a>
                         </div>
                     </div>
                 </div>
@@ -532,7 +532,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <a href="#preco" class="btn custom-btn shadow-lg fw-bolder text-uppercase">Comprar Agora</a>
+                            <a href="https://ev.braip.com/campanhas/cpa/cam972nep" class="btn custom-btn shadow-lg fw-bolder text-uppercase">Comprar Agora</a>
                         </div>
                     </div>
                 </div>
