--- a/index.html
+++ b/index.html
@@ -143,6 +143,17 @@
 
   
     </style>
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16603309359">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-16603309359');
+</script>
 </head>
 
 <body>
