--- a/index.html
+++ b/index.html
@@ -823,7 +823,7 @@
                     </div>
                     <div class="col-md-3 mb-4 mb-md-0">
                         <h2 class="fs-4 text-white">Atendimento</h2>
-                        <a href="#" class="btn btn-whatsapp">
+                        <a href="https://wa.me/5548998386198?text=Ol%C3%A1%2C%20preciso%20de%20ajuda%20com%20o%20GotaZil!" class="btn btn-whatsapp">
                             <img src="wpp.svg" alt="WhatsApp">
                             Whatsapp
                         </a>
@@ -833,7 +833,6 @@
                         <ul class="list-unstyled">
                             <li><a href="./politicas.html">Política de Privacidade</a></li>
                             <li><a href="./termos.html">Termos de Uso</a></li>
-                            <li><a href="https://rastreamento.correios.com.br/app/index.php">Rastrear Pedido</a></li>
                         </ul>
                     </div>
                     <div class="col-md-3">
